Added logic to Search User in SearchServiceImpl. Now search view options are loaded dynamically

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -71,6 +71,7 @@ search.posts.categories.all=All posts
 search.posts.postAge.allTime=All time
 search.posts.postAge.pastYear=Past Year
 search.posts.postAge.pastMonth=Past month
+search.posts.postAge.pastWeek=Past week
 search.posts.postAge.pastDay=Past 24hs
 search.posts.categories.label=Post type:
 search.posts.postAge.label=From:
@@ -191,7 +192,7 @@ user.view.notDescription=This user doesn't have a description yet.
 user.profile.notDescription=You don't have a description yet. Enter one !
 user.profile.editingProfile=Editing {0}'s profile
 user.profile.editProfileDesc=Here you will be able to edit your data and password
-user.profile.edit.currentName=Current name: {0} 
+user.profile.edit.currentName=Current name: {0}
 user.profile.edit.newName=New name
 user.profile.edit.currentEmail=Current email : {0}
 user.profile.edit.newEmail=New email
