Fixed pagination not conserving order by when attribute wasn't part of the original table. (For example, total_likes in users). Search engine fully implemented for Users

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -209,5 +209,12 @@ user.profile.changePasswordDesc=You can change your password in here. Be careful
 user.profile.edit.name=Edit name
 user.profile.edit.username=Edit username
 user.profile.edit.description=Edit description
-
+search.user.role.label=Role:
+search.user.roles.all=Any
+search.user.roles.admin=Admin
+search.user.roles.user=User
+search.user.sortCriteria.label=Sort By:
+search.user.sortCriteria.name=Name
+search.user.sortCriteria.newest=Newest
+search.user.sortCriteria.likes=Likes
 
