--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -89,3 +89,6 @@ user.profile.changePasswordDesc=You can change your password in here. Be careful
 user.profile.edit.name=Edit name
 user.profile.edit.username=Edit username
 user.profile.edit.description=Edit description
+search.user.role.label=Role:
+search.user.roles.all=Any
+search.user.sortCriteria.label=Sort By:
