--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -58,7 +58,7 @@ search.posts.pageTitle = Posts search
 search.movies.pageTitle = Movies search
 search.users.pageTitle = Users search
 search.searchResults = Search results
-error.moovifyNotFound = Moovify | Page not found
+error.moovifyErrorTitle = Moovify | {0}
 error.errorWithCode = ERROR {0}
 error.pageNotFound = Page not found
 error.goBack = Go back
@@ -109,6 +109,7 @@ error.commentNotFoundException=The comment you're looking for doesn't exists. Ma
 error.userNotFoundException=The user you're looking for doesn't exists. Make sure the provided info is correct.
 error.defaultMessage=There seems to be an error in your request. You may try going back or starting again from the home page.
 error.noHandlerFoundException=The provided URL doesn't seem to be valid. You may try going back or starting again from the home page.
+error.accessDeniedException=You are not allowed to perform this action.
 user.view.Profile=Welcome to {0}'s Profile
 user.view.Posts=Posts written by {0}
 user.view.Comments=Comments made by {0}
