Better movie search finished. Back and front modified accordingly.

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -79,6 +79,54 @@ search.posts.sortCriteria.label=Sort by:
 search.posts.sortCriteria.newest=Newest
 search.posts.sortCriteria.hottest=Hottest
 search.posts.sortCriteria.oldest=Oldest
+
+# Search - Movies
+
+search.movies.categories.label=Category
+search.movies.categories.all=All
+search.movies.categories.action=Action
+search.movies.categories.adventure=Adventure
+search.movies.categories.animation=Animation
+search.movies.categories.comedy=Comedy
+search.movies.categories.crime=Crime
+search.movies.categories.documentary=Documentary
+search.movies.categories.drama=Drama
+search.movies.categories.family=Family
+search.movies.categories.fantasy=Fantasy
+search.movies.categories.history=History
+search.movies.categories.horror=Horror
+search.movies.categories.music=Music
+search.movies.categories.mystery=Mystery
+search.movies.categories.romance=Romance
+search.movies.categories.scienceFiction=Science Fiction
+search.movies.categories.tvMovie=TV Movie
+search.movies.categories.thriller=Thriller
+search.movies.categories.war=War
+search.movies.categories.western=Western
+
+search.movies.sortCriteria.label=Sort by
+search.movies.sortCriteria.title=Title
+search.movies.sortCriteria.newest=Newest
+search.movies.sortCriteria.oldest=Oldest
+search.movies.sortCriteria.mostPosts=Most Posts
+
+search.movies.decades.label=Decade
+search.movies.decades.any=Any
+search.movies.decades.1920s=1920s
+search.movies.decades.1930s=1930s
+search.movies.decades.1940s=1940s
+search.movies.decades.1950s=1950s
+search.movies.decades.1960s=1960s
+search.movies.decades.1970s=1970s
+search.movies.decades.1980s=1980s
+search.movies.decades.1990s=1990s
+search.movies.decades.2000s=2000s
+search.movies.decades.2010s=2010s
+
+
+
+
+
 post.create.body=Write the body of your post here. (It can't be empty)
 post.create.newPostCategory=Select your post category (Required)
 post.create.selectCategory=Choose a category
