adminPanel started and few other fixes

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -103,6 +103,8 @@ user.login.rememberMe=Remember me
 user.login.badCredentials=Incorrect user or password
 user.login.loginTitle=Log in
 
+adminPanel.title = Moovify | Admin Panel
+
 error.postNotFoundException=The post you're looking for doesn't exists. Make sure the provided info is correct.
 error.movieNotFoundException=The movie you're looking for doesn't exists. Make sure the provided info is correct.
 error.commentNotFoundException=The comment you're looking for doesn't exists. Make sure the provided info is correct.
@@ -214,7 +216,7 @@ user.profile.changePasswordDesc=You can change your password in here. Be careful
 user.profile.edit.name=Edit name
 user.profile.edit.username=Edit username
 user.profile.edit.description=Edit description
-comment.viewComment=View all replies
+comment.viewComment=View details
 user.create.selectAvatar=Want to select an avatar? (Optional)
 user.create.selectFile=Select file
 user.profile.uploadAvatar=Upload new avatar
