--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -220,5 +220,9 @@ comment.viewComment=View details
 user.create.selectAvatar=Want to select an avatar? (Optional)
 user.create.selectFile=Select file
 user.profile.uploadAvatar=Upload new avatar
+admin.deleted.searchResults=Search results
+admin.deleted.posts=Posts
+admin.deleted.comments=Comments
+admin.deleted.users=Users
 
 
