--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -104,6 +104,7 @@ user.login.badCredentials=Incorrect user or password
 user.login.loginTitle=Log in
 
 adminPanel.title = Moovify | Admin Panel
+adminPanel.btn = admin panel
 
 error.postNotFoundException=The post you're looking for doesn't exists. Make sure the provided info is correct.
 error.movieNotFoundException=The movie you're looking for doesn't exists. Make sure the provided info is correct.
