Visual changes for like functionality on post view

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -192,7 +192,7 @@ paginationController.pageSize.message=Showing
 user.view.postNotFound=This user doesn't have any posts.
 user.profile.postNotFound=You don't have posts. Create one !
 index.hottestPost=Hottest Posts
-post.view.likes=Likes:
+post.view.likes=Likes: {0}
 user.view.notDescription=This user doesn't have a description yet.
 user.profile.notDescription=You don't have a description yet. Enter one !
 user.profile.editingProfile=Editing {0}'s profile
@@ -214,7 +214,7 @@ user.profile.changePasswordDesc=You can change your password in here. Be careful
 user.profile.edit.name=Edit name
 user.profile.edit.username=Edit username
 user.profile.edit.description=Edit description
-comment.viewComment=View all replies
+comment.viewComment=All replies
 user.create.selectAvatar=Want to select an avatar? (Optional)
 user.create.selectFile=Select file
 user.profile.uploadAvatar=Upload new avatar
