--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -105,6 +105,7 @@ user.login.loginTitle=Log in
 
 adminPanel.title = Moovify | Admin Panel
 adminPanel.btn = admin panel
+adminPanel.restore = restore
 
 error.postNotFoundException=The post you're looking for doesn't exists. Make sure the provided info is correct.
 error.movieNotFoundException=The movie you're looking for doesn't exists. Make sure the provided info is correct.
@@ -126,6 +127,7 @@ user.profile.Administrator=Administrator
 user.profile.Description=Description: {0}
 user.profile.EditProfile=Edit Profile
 user.profile.adminBtn=promote to admin
+user.profile.deleteBtn=delete user
 user.profile.modalCancel=Cancel
 user.profile.modalTitle=Are you sure you want to promote {0} to Administrator?
 
@@ -167,8 +169,7 @@ post.view.movies=Movies
 post.view.tags=Key words
 post.view.writtenBy=Written by:
 search.posts.postsNotFound=There are no posts that match those requirements. Try changing the search parameters or looking for some new posts in the home screen.
-search.movies.moviesNotFound=There are no movies that match those requirements. Try changing the search parameters.
-search.user.userNotFound=There are no users that match those requirements. Try changing the search parameters.
+search.notFound=There are no {0} that match those requirements. Try changing the search parameters.
 user.resetPassword.send=Send email
 user.updatePassword.send=Change password
 user.emailConfirm.title=Email confirmation requiered
