New Comment mail implemented.

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -178,6 +178,8 @@ user.profile.modalTitle=Are you sure you want to promote {0} to Administrator?
 # EMAIL
 
 mail.confirmation.header=Welcome to Moovify! We are glad you decided to join the family
+mail.confirmation.message=In order to enable our all features you'd need to confirm your email. Click the link below and it'll be all set.
+mail.confirmation.confirmLink=Confirm email
 mail.confirmation.link=Finish the registration process
 user.login.resetPassword=Forgot my password
 user.resetPassword.title=Reset Password
@@ -267,6 +269,49 @@ comment.viewComment=All replies
 user.create.selectAvatar=Want to select an avatar? (Optional)
 user.create.selectFile=Select file
 user.profile.uploadAvatar=Upload new avatar
+SELECT movies.movie_id                    m_movie_id,
+       movies.creation_date               m_creation_date,
+       movies.release_date                m_release_date,
+       movies.title                       m_title,
+       movies.original_title              m_original_title,
+       movies.tmdb_id                     m_tmdb_id,
+       movies.imdb_id                     m_imdb_id,
+       movies.original_language           m_original_language,
+       movies.overview                    m_overview,
+       movies.popularity                  m_popularity,
+       movies.runtime                     m_runtime,
+       movies.vote_average                m_vote_average,
+       coalesce(POST_COUNT.post_count, 0) m_post_count,
+       movie_categories.category_id       mc_category_id,
+       movie_categories.tmdb_category_id  mc_tmdb_category_id,
+       movie_categories.name              mc_name
+FROM movies
+         LEFT OUTER JOIN (SELECT post_movie.movie_id, COUNT(posts.post_id) post_count
+                          FROM post_movie
+                                   INNER JOIN posts ON posts.post_id = post_movie.post_id
+                          WHERE posts.enabled = true
+                          GROUP BY post_movie.movie_id) POST_COUNT ON POST_COUNT.movie_id = movies.movie_id
+         INNER JOIN movie_to_movie_category ON movie_to_movie_category.tmdb_id = movies.tmdb_id
+         INNER JOIN movie_categories ON movie_to_movie_category.tmdb_category_id = movie_categories.tmdb_category_id
+WHERE movies.movie_id IN (SELECT AUX.movie_id
+                          FROM (SELECT ROW_NUMBER() OVER (ORDER BY movies.title) row_num, movies.movie_id
+                                FROM movies
+                                         LEFT OUTER JOIN (SELECT post_movie.movie_id, COUNT(posts.post_id) post_count
+                                                          FROM post_movie
+                                                                   INNER JOIN posts ON posts.post_id = post_movie.post_id
+                                                          WHERE posts.enabled = true
+                                                          GROUP BY post_movie.movie_id) POST_COUNT
+                                                         ON POST_COUNT.movie_id = movies.movie_id
+                                         INNER JOIN movie_to_movie_category
+                                                    ON movie_to_movie_category.tmdb_id = movies.tmdb_id
+                                         INNER JOIN movie_categories ON movie_to_movie_category.tmdb_category_id =
+                                                                        movie_categories.tmdb_category_id
+                                WHERE movies.title ILIKE '%' || ? || '%'
+                                  AND movies.release_date between ? AND ?) AUX
+                          GROUP BY AUX.movie_id
+                          ORDER BY MIN(AUX.row_num)
+                          LIMIT 5 OFFSET 0)
+ORDER BY movies.title;
 
 search.user.role.label=Role:
 search.user.roles.all=Any
@@ -276,4 +321,10 @@ search.user.sortCriteria.label=Sort By:
 search.user.sortCriteria.name=Name
 search.user.sortCriteria.newest=Newest
 search.user.sortCriteria.likes=Likes
+mail.newComment.header={0} has recieved a new comment
+mail.newComment.subTitile={0} said
+mail.newComment.title=New comment
+mail.newComment.goToComment=Go check the comment
+mail.passwordReset.linkMessage=Reset Password
+mail.passwordReset.message=If you're trying to reset your password please follow the link below
 
