Delete user functional

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -179,6 +179,7 @@ user.profile.adminBtn=promote to admin
 user.profile.deleteBtn=delete user
 user.profile.modalCancel=Cancel
 user.profile.modalTitle=Are you sure you want to promote {0} to Administrator?
+user.profile.deleteTitle=Are you sure you want to delete {0}?
 
 # EMAIL
 
