Added userDisplay to show the user metadata, plus fixed the post metadata and some visual fixes on the profile and user view.

--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -95,3 +95,5 @@ search.user.sortCriteria.label=Sort By:
 user.create.selectAvatar=Want to select an avatar? (Optional)
 user.create.selectFile=Select file
 user.profile.uploadAvatar=Upload new avatar
+commentDisplay.meta.description=Post: {0} - Votes: {1}
+userDisplay.meta.description=Name: {0} - Total votes: {1}
