--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -227,7 +227,7 @@ user.updatePassword.send=Change password
 user.emailConfirm.title=Email confirmation requiered
 user.emailConfirm.text=To be able to create a new post, you have to confirm your email address. Check your email box, we sent you a link!
 user.emailConfirm.closeModal=Ok, got it!
-postDisplay.meta.description={0} - By {1}
+postDisplay.meta.description={0} - By: {1} - Votes: {2}
 postDisplay.meta.age.days={0} days ago
 postDisplay.meta.age.hours={0} hours ago
 postDisplay.meta.age.minutes={0} mins ago
@@ -293,4 +293,6 @@ mail.newComment.title=New comment
 mail.newComment.goToComment=Go check the comment
 mail.passwordReset.linkMessage=Reset Password
 mail.passwordReset.message=If you're trying to reset your password please follow the link below
+commentDisplay.meta.description=Post: {0} - Votes: {1}
+userDisplay.meta.description=Name: {0} - Total votes: {1}
 
