Change searchService contract, now every search method uses Optional.

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -162,6 +162,7 @@ error.commentNotFoundException=The comment you're looking for doesn't exists. Ma
 error.userNotFoundException=The user you're looking for doesn't exists. Make sure the provided info is correct.
 error.defaultMessage=There seems to be an error in your request. You may try going back or starting again from the home page.
 error.noHandlerFoundException=The provided URL doesn't seem to be valid. You may try going back or starting again from the home page.
+error.invalidSearchArgumentsException=The arguments provided for the search are invalid.
 error.accessDeniedException=You are not allowed to perform this action.
 user.view.Profile=Welcome to {0}'s Profile
 user.view.Posts=Posts written by {0}
