Deleted form constraints which made calls to the bd. Now those validations are done in the corresponding Dao.

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -10,6 +10,10 @@ Pattern=Invalid {0}
 Email=The input is not a valid email
 UniqueEmail=Email already in use
 Avatar=The avatar uploaded must be an image smaller than 1 MB
+validation.user.UniqueUsername=Username already in use
+validation.user.UniqueEmail=Email already in use
+validation.resetPassword.InvalidEmail=The email provided is not valid
+validation.resetPassword.EmailNotValidated=The email provided wasn't validated
 index.pagename=Moovify
 watchlist = Watchlist
 news = News
