Added title to admin panel

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -280,6 +280,7 @@ comment.viewComment=View details
 user.create.selectAvatar=Want to select an avatar? (Optional)
 user.create.selectFile=Select file
 user.profile.uploadAvatar=Upload new avatar
+admin.deleted.title=Restore deleted {0}
 admin.deleted.searchResults=Search results
 admin.deleted.posts=Posts
 admin.deleted.comments=Comments
