Now if in Post creation an invalid movie id is provided, an InvalidMovieIdException is thrown. The controller should catch it and show a correct Http code

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -12,6 +12,7 @@ UniqueEmail=Email already in use
 Avatar=The avatar uploaded must be an image smaller than 1 MB
 validation.user.UniqueUsername=Username already in use
 validation.user.UniqueEmail=Email already in use
+validation.post.create.InvalidMovies=An invalid Movie was selected. Please, choose one of the options presented.
 validation.resetPassword.InvalidEmail=The email provided is not valid
 validation.resetPassword.EmailNotValidated=The email provided wasn't validated
 index.pagename=Moovify
