Added all RuntimeExceptions from webapp and interfaces to GlobalExceptionHandler

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -161,14 +161,18 @@ adminPanel.title = Moovify | Admin Panel
 adminPanel.btn = admin panel
 adminPanel.restore = restore
 
-error.postNotFoundException=The post you're looking for doesn't exists. Make sure the provided info is correct.
-error.movieNotFoundException=The movie you're looking for doesn't exists. Make sure the provided info is correct.
-error.commentNotFoundException=The comment you're looking for doesn't exists. Make sure the provided info is correct.
-error.userNotFoundException=The user you're looking for doesn't exists. Make sure the provided info is correct.
+error.postNotFoundException=The post you're looking for doesn't exist. Make sure the provided info is correct.
+error.movieNotFoundException=The movie you're looking for doesn't exist. Make sure the provided info is correct.
+error.commentNotFoundException=The comment you're looking for doesn't exist. Make sure the provided info is correct.
+error.userNotFoundException=The user you're looking for doesn't exist. Make sure the provided info is correct.
 error.defaultMessage=There seems to be an error in your request. You may try going back or starting again from the home page.
 error.noHandlerFoundException=The provided URL doesn't seem to be valid. You may try going back or starting again from the home page.
-error.invalidSearchArgumentsException=The arguments provided for the search are invalid.
+error.invalidSearchArgumentsException=The arguments provided for the search are invalid. Make sure the provided info is correct.
 error.accessDeniedException=You are not allowed to perform this action.
+error.invalidPostCategoryException=The Post Category provided is invalid. Make sure the provided info is correct.
+error.nonExistingSearchCriteriaException=The order provided for the search is invalid. Make sure the provided info is correct.
+error.invalidMovieIdException=A Movie selected is invalid. Make sure the provided info is correct.
+error.invalidPaginationArgumentException=Pagination Arguments provided (Page Size and/or Page Number) are invalid. Make sure the provided info is correct.
 user.view.Profile=Welcome to {0}'s Profile
 user.view.Posts=Posts written by {0}
 user.view.Comments=Comments made by {0}
