UserDaoTest and UserServiceTest, plus some visual fixes to some views and

--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -22,7 +22,7 @@ post.create.body=Write the body of your post here. (It can't be empty)
 post.create.modal.movieError.client=You have to select at least one movie
 post.create.title=Create Post
 post.view.comments.title=Comments ({0})
-post.view.likes=Likes: {0}
+post.view.votes=Votes: {0}
 post.view.movies=Movies:
 post.view.tags=Key words
 post.view.writtenBy=Written by:
