--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -173,6 +173,7 @@ error.invalidPostCategoryException=The Post Category provided is invalid. Make s
 error.nonExistingSearchCriteriaException=The order provided for the search is invalid. Make sure the provided info is correct.
 error.invalidMovieIdException=A Movie selected is invalid. Make sure the provided info is correct.
 error.invalidPaginationArgumentException=Pagination Arguments provided (Page Size and/or Page Number) are invalid. Make sure the provided info is correct.
+error.invalidRoleException=The Role of the user given is not valid. Make sure the provided info is correct.
 user.view.Profile=Welcome to {0}'s Profile
 user.view.Posts=Posts written by {0}
 user.view.Comments=Comments made by {0}
@@ -259,7 +260,7 @@ paginationController.pageSize.message=Showing
 user.view.postNotFound=This user doesn't have any posts.
 user.profile.postNotFound=You don't have posts. Create one !
 index.hottestPost=Hottest Posts
-post.view.likes=Likes: {0}
+post.view.votes=Votes: {0}
 user.view.notDescription=This user doesn't have a description yet.
 user.profile.notDescription=You don't have a description yet. Enter one !
 user.profile.editingProfile=Editing {0}'s profile
