Traduje todos los mensajes a español!

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -1,8 +1,8 @@
 Size=The {0} must be between {1} and {2} characters
-MaxTagsSizeConstraint = The maximum amount of {0} permitted are 5
-MoviesSizeConstraint = You must select at least one movie from the list of {0} and no more than 20
+MaxTagsSizeConstraint=The maximum amount of {0} permitted are 5
+MoviesSizeConstraint=You must select at least one movie from the list of {0} and no more than 20
 Min=You must pick {1} {0}
-ValidPassword= Password must be between 12 and 30 characters
+ValidPassword=Password must be between 12 and 30 characters
 UniqueUsername=Username already in use
 NotEmpty=The {0} cannot be empty
 ValidatedEmail=There isn't a user with that email validated
@@ -30,7 +30,7 @@ post.create.newPost=Create new post
 post.create.titlePlaceholder=Title
 post.create.emailPlaceholder=Email
 post.create.createButton=Create
-post.create.newPostTitle=Choose a title for your post (At least six characters)
+post.create.newPostTitle=Choose a title for your post (At least 6 characters)
 post.create.newPostEmail=Insert your email
 post.create.modal.moviesDiscussed.title=What movies are discussed in this Post?
 post.create.modal.moviesDiscussed.constrains=You have to choose at least one (max 20)
@@ -143,7 +143,7 @@ user.create.Name=Name
 user.create.Email=Email
 user.create.repeatPassword=Repeat password
 user.create.signUpTitle=Sign up
-user.create.signUpDesc=Please fill this form get free access to Moovify
+user.create.signUpDesc=Please fill this form to get free access to Moovify
 user.create.button=Create account
 user.create.alreadyAccount=Already have an account?
 user.login=Login
