--- a/webapp/src/main/resources/i18n/messages_es_ES.properties
+++ b/webapp/src/main/resources/i18n/messages_es_ES.properties
@@ -1,4 +1,4 @@
-Size=El {0} debe tener entre {2} y {1} caractér
+Size=El {0} debe tener entre {2} y {1} caracter
 MaxTagsSizeConstraint=El máximo número permitido de {0} es 5
 MoviesSizeConstraint=Debes seleccionar al menos una película de la lista de {0} y no más de 20
 Min=Debes seleccionar {1} {0}
@@ -123,7 +123,7 @@ search.movies.sortCriteria.oldest=Más antiguos
 search.movies.sortCriteria.mostPosts=Más Posts
 search.user.sortCriteria.name=Nombre
 search.user.sortCriteria.newest=Más recientes
-search.user.sortCriteria.likes=Mas likes
+search.user.sortCriteria.likes=Más likes
 
 search.movies.decades.label=Decada
 search.movies.decades.any=Cualquiera
@@ -148,17 +148,17 @@ user.create.Email=Email
 user.create.repeatPassword=Repetir contraseña
 user.create.signUpTitle=Registrate
 user.signup=Registrate
-user.create.signUpDesc=Por favor llena este formulario para obtener acceso gratis a Moovify
+user.create.signUpDesc=Por favor complete este formulario para obtener acceso gratis a Moovify
 user.create.button=Crear una cuenta
 user.create.alreadyAccount=¿Ya posees una cuenta?
 user.login=Iniciar sesión
-user.login.loginTitle=Inicar sesión
+user.login.loginTitle=Iniciar sesión
 user.login.noAccount=¿No posee una cuenta todavía?
 user.logout=Salir
 user.profile=Mi perfil
 user.login.enterUsername=Escribe tu nombre de usuario
 user.login.enterPassword=Escribe tu contraseña
-user.login.rememberMe=Recuerdame
+user.login.rememberMe=Recuérdame
 user.login.badCredentials=Usuario o contraseña incorrecta
 
 
@@ -170,9 +170,9 @@ error.postNotFoundException=El post que estabas tratando de buscar no existe. As
 error.movieNotFoundException=La película que estabas tratando de buscar no existe. Asegurate que la información provista es correcta
 error.commentNotFoundException=El comentario que estabas tratando de buscar no existe. Asegurate que la información provista es correcta
 error.userNotFoundException=El usuario que estabas tratando de buscar no existe. Asegurate que la información provista es correcta
-error.defaultMessage=Parece haber un error con tu pedido. Puedes intentar yendo hacia atrás o comenzando denuevo desde la página de inicio.
+error.defaultMessage=Parece haber un error con tu pedido. Puedes intentar volviendo hacia atrás o comenzando de nuevo desde la página de inicio.
 error.noHandlerFoundException=La URL provista no parece ser válida. Puedes intentar yendo hacia atras o comenzando denuevo desde la página de inicio.
-error.invalidSearchArgumentsException=Los argumentos provistos para la búsqueda no son validos. Asegurate de estar escribiendo la información correcta.
+error.invalidSearchArgumentsException=Los argumentos provistos para la búsqueda no son válidos. Asegurate de estar escribiendo la información correcta.
 error.accessDeniedException=No puedes realizar esta acción.
 error.invalidPostCategoryException=La categoría del post seleccionada no es correcta. Asegurate de estar escribiendo la información correcta.
 error.nonExistingSearchCriteriaException=El orden provisto para la búsqueda no es correcto. Asegurate de estar escribiendo la información correcta.
@@ -202,14 +202,14 @@ user.profile.deleteTitle=¿Está seguro que quiere borrar {0}?
 mail.confirmation.header=Bienvenido a Moovify. Estamos muy felices que hayas decidido unirte a nuestra familia.
 mail.confirmation.message=Para habilitar todas nuestras funcionalidades debes verificar tu cuenta. Has click en el link de abajo para hacerlo.
 mail.confirmation.confirmLink=Confirmar email
-mail.confirmation.link=Finalizar el proceso de registrate.
+mail.confirmation.link=Finalizar el proceso de registración.
 user.login.resetPassword=Olvide mi contraseña
-user.resetPassword.title=Resetear contraseña
-user.resetPassword.header=Escribe tu email para resetear tu contraseña.
+user.resetPassword.title=Restaurar contraseña
+user.resetPassword.header=Escribe tu email para restaurar tu contraseña.
 user.resetPassword.email=Escribe tu email
 user.resetPassword.validatedEmail.request=Importante: Tu email debe estar verificado para poder recuperar tu contraseña.
-user.resetPasswordTokenGenerated.title=Token para resetear tu contraseña creado.
-user.resetPasswordTokenGenerated.body=Te acabamos de enviar un email a {0}.\nSigue el link incluido para terminar de restear tu contraseña.
+user.resetPasswordTokenGenerated.title=Token para restaurar la contraseña creado.
+user.resetPasswordTokenGenerated.body=Acabamos de enviarte un email a {0}.\nSigue el link incluido para terminar de restaurar tu contraseña.
 user.updatePassword.title=Actualizar contraseña
 user.updatePassword.password=Escribe la nueva contraseña
 user.updatePassword.failure=El link es inválido o expiro, por favor intenta de nuevo.
@@ -217,12 +217,12 @@ user.updatePassword.success=Reiniciar tu contraseña.
 user.passwordResetSuccess=¡{0}, tu contraseña fue cambiada exitosamente!
 user.passwordResetSuccess.title=Cambio de contraseña exitoso
 user.notEnabled.name=Removido
-mail.passwordReset.header=Restear contraseña
+mail.passwordReset.header=Restaurar contraseña
 mail.passwordReset.link=Sigue este link para cambiar tu contraseña
-mail.passwordReset.title=Resetear contraseña
+mail.passwordReset.title=Restaurar contraseña
 mail.confirmation.title=Email de confirmación
 user.updatePasswordError.title=Actualizar contraseña
-user.profile.ConfirmationEmail=Por favor no te olvides de validar tu cuenta. Acepta el email que te hemos enviado. Si no puedes encontrarlo has click aquí. 
+user.profile.ConfirmationEmail=Por favor no te olvides de validar tu cuenta. Acepta el email que te hemos enviado. Si no puedes encontrarlo has click aquí.
 user.profile.ResendEmail=Reenviar email
 email.resendMessage={0}, el email de confirmación fue exitosamente enviado a: {1}
 email.emailConfirmation=Confirmar email.
@@ -233,7 +233,7 @@ email.errorResendEmail=Ups, parece que algo salió mal. Si deseas reenviar el ema
 comment.create.not_validated=Si deseas dejar un comentario por favor valida tu email.
 comment.replies.show=Mostrar respuestas ({0}) ...
 comment.notEnabled.message=** Este comentario fue removido :( **
-comment.notEnabled.fullMessage=Este comentario fue removido. Aqui puedes ver las respuestas que recibió mientras estaba activo.
+comment.notEnabled.fullMessage=Este comentario fue removido. Aquí puedes ver las respuestas que recibió mientras estaba activo.
 
 post.view.movies=Películas
 post.view.tags=Palabras clave
@@ -245,35 +245,35 @@ search.notFound=No hay {0} para estos requerimientos. Intenta cambiar los paráme
 user.resetPassword.send=Enviar email
 user.updatePassword.send=Cambiar contraseña
 user.emailConfirm.title=Se necesita confirmar el email
-user.emailConfirm.text=Para poder crear un posts, necesitas confirmar tu email. Revisa tu casilla de email, ¡te hemos enviado un link!
-user.emailConfirm.closeModal=Ok, ¡lo tienes!
+user.emailConfirm.text=Para poder crear un posts, necesitas confirmar tu email. Revisa tu casilla de correo, ¡Te hemos enviado un link!
+user.emailConfirm.closeModal=Ok, ¡Entendido!
 
 postDisplay.meta.description={0} - Por: {1}
 postDisplay.meta.votes= - Votos: {0}
 postDisplay.meta.age.days=Hace {0} días
 postDisplay.meta.age.hours=Hace {0} horas
-postDisplay.meta.age.minutes=Hace {0} mins
+postDisplay.meta.age.minutes=Hace {0} minutos
 
 post.create.modal.movieError.client=Debes seleccionar al menos una película
 user.view.CommentsNotFound=Este usuario todavía no tiene comentarios.
 
 user.profile.CommentsNotFound=Todavía no tienes ningún comentario. Ve a un post y da tu opinión.
-post.view.comments.title=Commentarios ({0})
+post.view.comments.title=Comentarios ({0})
 
 movie.view.meta.releaseDate=Día de estreno: {0}
 movie.view.meta.popularity=Popularidad: {0}
-movie.view.meta.originalLanguage=Lengua original: {0}
+movie.view.meta.originalLanguage=Lenguage original: {0}
 movie.view.meta.originalTitle=Titulo originial: {0}
 movie.view.meta.voteAverage=Voto promedio: {0}
 movie.view.meta.movieCategories.title=Categoría de película
 
 movie.view.overview=Visión general
-movie.view.posts.postsNotFound=No parecen existir post de esta película, ¡crea uno!
+movie.view.posts.postsNotFound=No parecen existir post de esta película, ¡Crea uno!
 
 search.posts.pagination.pageSize.default=5
 paginationController.pageSize.message=Mostrando
 user.view.postNotFound=Este usuario no tiene posts
-user.profile.postNotFound=No tienes posts, ¡crea uno!
+user.profile.postNotFound=No tienes posts, ¡Crea uno!
 index.hottestPost=Post más votados.
 post.view.votes=Votos: {0}
 
@@ -321,8 +321,8 @@ mail.newComment.header={0} ha recibido un comentario
 mail.newComment.subTitile={0} dijo
 mail.newComment.title=Nuevo comentario
 mail.newComment.goToComment=Ve a revisar el comentario
-mail.passwordReset.linkMessage=Resetear contraseña
-mail.passwordReset.message=Si estas intentando resetear tu contraseña, por favor has click en el link de abajo.
+mail.passwordReset.linkMessage=Restaurar contraseña
+mail.passwordReset.message=Si estas intentando restaurar tu contraseña, por favor has click en el link de abajo.
 
 commentDisplay.meta.description=Post: {0} - Votos: {1}
 userDisplay.meta.description=Nombre: {0} - Votos totales: {1}
