added parallax welcome banner in homescreen

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -23,6 +23,7 @@ critique = Critique
 navbar.searchDots=Search...
 navbar.search=Search
 navbar.createPost=Create Post
+index.welcome=Welcome to Moovify!
 index.newestPost=Newest Posts
 index.oldestPost=Oldest Posts
 post.create.title=Create Post
