--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -29,6 +29,7 @@ navbar.search=Búsqueda
 
 
 navbar.createPost=Crear Post
+index.welcome=¡Bienvenido a Moovify!
 index.newestPost=Posts más recientes
 index.oldestPost=Posts más antiguos
 post.create.title=Crear Post
