Moved extraStyles Stylesheet to global dependencies. Added feedback to avatar upload in user create. Fix minor bug in homeRedirect

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -328,4 +328,7 @@ mail.passwordReset.message=Si estas intentando resetear tu contraseña, por favo
 commentDisplay.meta.description=Post: {0} - Votos: {1}
 userDisplay.meta.description=Nombre: {0} - Votos totales: {1}
 
+user.create.noAvatarSelected=No Avatar Selected
+user.create.avatarSelected=Selected Avatar: 
+
 
