Added validations in Controllers on Updates to the Persistence layer, especially to handle disabled models.

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -310,3 +310,11 @@ mail.passwordReset.message=If you're trying to reset your password please follow
 commentDisplay.meta.description=Post: {0} - Votes: {1}
 userDisplay.meta.description=Name: {0} - Total votes: {1}
 
+
+# Tobi <3
+error.DeletedDisabledModelException=You tried to delete an entity which was already deleted
+error.RestoredEnabledModelException=You tried to restore an entity which was already restored
+error.IllegalCommentLikeException=The Comment you tried to vote on is not valid
+error.IllegalPostLikeException=The Post you tried to vote on is not valid
+error.InvalidUserPromotionException=You tried to promote an invalid User
+
