Changed navbar dropdown style, fixed search in navbar and corrected minor details.

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -25,7 +25,7 @@ search.posts.categories.watchlist=Watchlist
 search.posts.categories.news=News
 search.posts.categories.debate=Debate
 navbar.searchDots=Búsqueda...
-navbar.search=Búsqueda
+navbar.search=Buscar
 
 
 navbar.createPost=Crear Post
