One translation added.

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -19,7 +19,7 @@ validation.resetPassword.EmailNotValidated=El email no ha sido validado
 #############################################################NAVBAR#############################################################
 
 navbar.searchDots=B\u00FAsqueda...
-navbar.search=B\u00FAsqueda
+navbar.search=Buscar
 navbar.createPost=Crear Post
 
 #############################################################INDEX#############################################################
