Minor visual fixes, and added a message of a constraint

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -1,4 +1,4 @@
-Size=El {0} debe tener entre {2} y {1} caracter
+Size=El {0} debe tener entre {2} y {1} caracteres
 SpacesNormalization=Uso de espacios inv\u00E1lido
 Min=Debes seleccionar {1} {0}
 MaxTagsSizeConstraint=El m\u00E1ximo n\u00FAmero permitido de {0} es 5
@@ -6,6 +6,7 @@ MoviesSizeConstraint=Debes seleccionar al menos una pel\u00EDcula de la lista de
 Email=No es un email v\u00E1lido
 NotEmpty={0} no puede ser vac\u00EDo
 ValidPassword=La contrase\u00F1a debe tener entre 12 y 30 caracteres
+PasswordsEqualConstraint=Las contrase\u00F1as deben ser iguales
 UniqueUsername=El nombre de usuario ya est\u00E1 en uso
 Pattern={0} inv\u00E1lido
 ValidatedEmail=No hay un usuario con ese email validado
@@ -49,7 +50,7 @@ admin.deleted.users=Usuarios
 
 #############################################################POSTS#############################################################
 
-post.view.written=Escrito en
+post.view.written=Escrito el
 post.view.minReading=Toma {0} min para leer
 post.view.movies=Pel\u00EDculas
 post.view.tags=Palabras clave
