--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -7,6 +7,7 @@ Email=The input is not a valid email
 NotEmpty=The {0} cannot be empty
 ValidPassword=Password must be between 12 and 30 characters
 UniqueUsername=Username already in use
+PasswordsEqualConstraint=Passwords must match
 Pattern=Invalid {0}
 ValidatedEmail=There isn't a user with that email validated
 Avatar=The avatar uploaded must be an image smaller than 1 MB
