Now deleted post cant be accessed through it's comments. Modified user view from admins perspective

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -86,6 +86,7 @@ postDisplay.meta.age.minutes={0} mins ago
 #############################################################COMMENTS#############################################################
 
 comment.view.votes=Votes: {0}
+comment.view.post.removed=Post removed
 comment.notEnabled.message=** This comment was removed :( **
 comment.notEnabled.fullMessage=This comment was removed. Here you can see all the replies it had while it was active
 comment.delete.button=Delete comment
