--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -87,6 +87,7 @@ postDisplay.meta.age.minutes=Hace {0} mins
 #############################################################COMMENTS#############################################################
 
 comment.view.votes=Votos: {0}
+comment.view.post.removed=Post borrado
 comment.notEnabled.message=** Este comentario fue removido :( **
 comment.notEnabled.fullMessage=Este comentario fue removido. Aqui puedes ver las respuestas que recibi\u00F3 mientras estaba activo.
 comment.delete.button=Borrar comentario
