--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -7,6 +7,8 @@ Email=No es un email v\u00E1lido
 NotEmpty={0} no puede ser vac\u00EDo
 ValidPassword=La contrase\u00F1a debe tener entre 12 y 30 caracteres
 PasswordsEqualConstraint=Las contrase\u00F1as deben ser iguales
+PasswordsUpdateEqualConstraint=Las contrase\u00F1as deben ser iguales
+
 UniqueUsername=El nombre de usuario ya est\u00E1 en uso
 Pattern={0} inv\u00E1lido
 ValidatedEmail=No hay un usuario con ese email validado
@@ -141,7 +143,7 @@ user.create.newDescription=Nueva descripci\u00F3n
 user.create.selectAvatar=\u00BFDeseas seleccionar un avatar? (Opcional)
 user.create.selectFile=Selecciona un archivo
 user.create.noAvatarSelected=Avatar no seleccionado
-user.create.avatarSelected=Seleccionar un Avatar:
+user.create.avatarSelected=Avatar seleccionado:
 
 user.profile.ResendEmail=Reenviar email
 user.profile.Profile=Perfil de {0}
