Invite the using to create an account in post and comment views.

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -107,6 +107,8 @@ comment.create.button=Enviar
 comment.create.not_validated=Si deseas dejar un comentario por favor valida tu email.
 comment.create.replyBtn=Enviar
 comment.create.replyPlaceholder=Escribe una respuesta...
+comment.create.noAccount.message=Para poder empezar a comentar y crear post es necesario que
+comment.create.noAccount.createAccount= crees tu cuenta.
 
 #############################################################PAGINATION#############################################################
 
