--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -105,6 +105,8 @@ comment.create.button = Submit
 comment.create.not_validated=If you would like to leave a comment, please confirm your mail address!
 comment.create.replyPlaceholder = Write a reply...
 comment.create.replyBtn = Send
+comment.create.noAccount.message=If you want to start commenting and creating post head out to the sign up to
+comment.create.noAccount.createAccount= create your account.
 
 #############################################################PAGINATION#############################################################
 
