Minor visual fixed feat. Faus

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -124,7 +124,7 @@ user.login.noAccount=\u00BFNo posee una cuenta todav\u00EDa?
 user.login.Username=Nombre de usuario
 user.login.Password=Contrase\u00F1a
 user.login.loginTitle=Inicar sesi\u00F3n
-user.login.rememberMe=Recuerdame
+user.login.rememberMe=Recuérdame
 user.login.badCredentials=Usuario o contrase\u00F1a incorrecta
 user.login.resetPassword=Olvide mi contrase\u00F1a
 user.create.Username=Nombre de usuario
