Finished adding messages to the admin panel

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -260,6 +260,8 @@ movie.view.posts.postsNotFound=There doesn't seem to exists posts about this mov
 
 search.posts.postsNotFound=There are no posts that match those requirements. Try changing the search parameters or looking for some new posts in the home screen.
 search.notFound=There are no {0} that match those requirements. Try changing the search parameters.
+search.commentsNotFound=There are no comments that match those requirements. Try changing the search parameters.
+search.usersNotFound=There are no users that match those requirements. Try changing the search parameters.
 search.searchResults = Search results
 
 #############################################################SEARCH-Posts#############################################################
