--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -186,7 +186,7 @@ user.profile.edit.username=Editar nombre de usuario
 user.profile.edit.description=Editar descripci\u00F3n
 user.view.Profile=Bienvenido al perfil de {0}
 user.view.Posts=Posts escritos por {0}
-user.view.Comments=Comments de {0}
+user.view.Comments=Comentarios de {0}
 user.view.CommentsNotFound=Este usuario todav\u00EDa no tiene comentarios.
 user.view.postNotFound=Este usuario no tiene posts.
 user.view.notDescription=Este usuario todav\u00EDa no tiene una descripci\u00F3n.
@@ -257,6 +257,8 @@ movie.view.posts.postsNotFound=No parecen existir post de esta pel\u00EDcula, \u
 #############################################################SEARCH#############################################################
 
 search.notFound=No hay {0} para estos requerimientos. Intenta cambiar los par\u00E1metros de b\u00FAsqueda.
+search.commentsNotFound=No hay comentarios para estos requerimientos. Intenta cambiar los par\u00E1metros de b\u00FAsqueda.
+search.usersNotFound=No hay usuarios para estos requerimientos. Intenta cambiar los par\u00E1metros de b\u00FAsqueda.
 search.searchResults=Resultados de la b\u00FAsqueda
 
 #############################################################SEARCH-Posts#############################################################
