--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -125,13 +125,13 @@ user.logout=Salir
 user.profile=Mi perfil
 user.signup=Registrate
 user.login=Iniciar sesi\u00F3n
-user.login.noAccount=\u00BFNo posee una cuenta todav\u00EDa?
+user.login.noAccount=\u00BFNo posees una cuenta todav\u00EDa?
 user.login.Username=Nombre de usuario
 user.login.Password=Contrase\u00F1a
 user.login.loginTitle=Inicar sesi\u00F3n
 user.login.rememberMe=Recuérdame
 user.login.badCredentials=Usuario o contrase\u00F1a incorrecta
-user.login.resetPassword=Olvide mi contrase\u00F1a
+user.login.resetPassword=Olvid\u00E9 mi contrase\u00F1a
 user.create.Username=Nombre de usuario
 user.create.Password=Contrase\u00F1a
 user.create.Name=Nombre
@@ -196,15 +196,15 @@ user.passwordResetSuccess=\u00A1Tu contrase\u00F1a fue cambiada exitosamente!
 user.passwordResetSuccess.goHome=Volver al inicio
 user.passwordResetSuccess.createPost=Crear un Post
 user.passwordResetSuccess.countdown=Redirigiendo al inicio en
-user.resetPassword.title=Resetear contrase\u00F1a
-user.resetPassword.header=Escribe tu email para resetear tu contrase\u00F1a.
+user.resetPassword.title=Restaurar contrase\u00F1a
+user.resetPassword.header=Escribe tu email para restaurar tu contrase\u00F1a.
 user.resetPassword.email=Escribe tu email
 user.resetPassword.validatedEmail.request=Importante: Tu email debe estar verificado para poder recuperar tu contrase\u00F1a.
 user.resetPassword.send=Enviar email
 user.resetPasswordTokenGenerated=Token de recuperaci\u00F3n de contrase\u00F1a generado
 user.resetPasswordTokenGenerated.title=Te hemos enviado un email a {0}
 user.updatePassword.title=Actualizar contrase\u00F1a
-user.updatePassword.success.title=Resetea tu contrase\u00F1a
+user.updatePassword.success.title=Restaura tu contrase\u00F1a
 user.updatePassword.success.body=Asegurate que tu contrase\u00F1a tenga 12 o m\u00E1s caracteres
 user.updatePassword.password=Escribe la nueva contrase\u00F1a
 user.updatePassword.send=Cambiar contrase\u00F1a
@@ -223,15 +223,15 @@ mail.newComment.header={0} ha recibido un comentario
 mail.newComment.subTitile={0} dijo
 mail.newComment.title=Nuevo comentario
 mail.newComment.goToComment=Ve a revisar el comentario
-mail.passwordReset.linkMessage=Resetear contrase\u00F1a
-mail.passwordReset.message=Si estas intentando resetear tu contrase\u00F1a, por favor has click en el link de abajo.
-mail.passwordReset.header=Restear contrase\u00F1a
-mail.passwordReset.title=Resetear contrase\u00F1a
+mail.passwordReset.linkMessage=Restaurar contrase\u00F1a
+mail.passwordReset.message=Si estas intentando restaurar tu contrase\u00F1a, por favor has click en el link de abajo.
+mail.passwordReset.header=Restaurar contrase\u00F1a
+mail.passwordReset.title=Restaurar contrase\u00F1a
 mail.confirmation.header=Bienvenido a Moovify. Estamos muy felices que hayas decidido unirte a nuestra familia.
 mail.confirmation.message=Para habilitar todas nuestras funcionalidades debes verificar tu cuenta. Has click en el link de abajo para hacerlo.
 mail.confirmation.confirmLink=Confirmar email
 mail.confirmation.title=Email de confirmaci\u00F3n
-mail.resetPasswordTokenGenerated.body=Sigue el link incluido para terminar de resetear tu contrase\u00F1a.
+mail.resetPasswordTokenGenerated.body=Sigue el link incluido para terminar de restaurar tu contrase\u00F1a.
 mail.registrationConfirm.title=Felicitaciones {0}, tu email ha sido confirmado correctamente!
 mail.registrationConfirm.body=Ahora podras acceder a todas las funcionalidades de Moovify.
 mail.errorResendEmail=El link que estas intentando usar no es v\u00E1lido :(
