Change the titles of all the pages and added visual fixes

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -59,10 +59,11 @@ post.view.tags=Palabras clave
 post.view.writtenBy=Escrito por:
 post.view.comments.title=Comentarios ({0})
 post.view.votes=Votos: {0}
+post.view.title= Moovify | Post: {0}
 post.delete.button=Borrar Post
 post.delete.modalTitle=\u00BFEst\u00E1 seguro que quiere borrar este Post?
 
-post.create.title=Crear Post
+post.create.title=Moovify | Crear Post
 post.create.newPost=Crear un nuevo Post
 post.create.titlePlaceholder=T\u00EDtulo
 post.create.createButton=Crear
@@ -88,6 +89,7 @@ postDisplay.meta.age.minutes=Hace {0} mins
 
 #############################################################COMMENTS#############################################################
 
+comment.title=Moovify | Comentarios
 comment.view.votes=Votos: {0}
 comment.view.post.removed=Post borrado
 comment.notEnabled.message=** Este comentario fue removido :( **
@@ -125,6 +127,7 @@ user.logout=Salir
 user.profile=Mi perfil
 user.signup=Registrate
 user.login=Iniciar sesi\u00F3n
+user.login.title=Moovify | Iniciar sesi\u00F3n
 user.login.noAccount=\u00BFNo posees una cuenta todav\u00EDa?
 user.login.Username=Nombre de usuario
 user.login.Password=Contrase\u00F1a
@@ -137,7 +140,7 @@ user.create.Password=Contrase\u00F1a
 user.create.Name=Nombre
 user.create.Email=Email
 user.create.repeatPassword=Repetir contrase\u00F1a
-user.create.signUpTitle=Registrate
+user.create.signUpTitle=Moovify | Registrate
 user.create.signUpDesc=Por favor llena este formulario para obtener acceso gratis a Moovify
 user.create.button=Crear una cuenta
 user.create.alreadyAccount=\u00BFYa posees una cuenta?
@@ -148,7 +151,7 @@ user.create.noAvatarSelected=Avatar no seleccionado
 user.create.avatarSelected=Avatar seleccionado:
 
 user.profile.ResendEmail=Reenviar email
-user.profile.Profile=Perfil de {0}
+user.profile.Profile=Moovify | Perfil de {0}
 user.profile.yourPosts=Tus Posts
 user.profile.yourComments=Tus comentarios
 user.profile.inMoovifySince=En Moovify desde: {0}
@@ -168,7 +171,7 @@ user.profile.CommentsNotFound=Todav\u00EDa no tienes ning\u00FAn comentario. Ve 
 user.profile.PostsNotFound=No tienes posts, \u00A1crea uno!
 user.profile.notDescription=Todav\u00EDa no tienes descripci\u00F3n. \u00A1Escribe una!
 user.profile.uploadAvatar=Subir avatar
-user.profile.editingProfile=Editando el perfil de {0}
+user.profile.editingProfile=Moovify | Editando el perfil de {0}
 user.profile.editProfileDesc=Aqu\u00ED podras editar tus datos y tu contrase\u00F1a.
 user.profile.edit.currentName=Nombre actual: {0}
 user.profile.edit.newName=Nuevo nombre
@@ -184,11 +187,11 @@ user.profile.changePasswordDesc=Puedes cambiar tu contrase\u00F1a aqu\u00ED. Cui
 user.profile.edit.name=Editar nombre
 user.profile.edit.username=Editar nombre de usuario
 user.profile.edit.description=Editar descripci\u00F3n
-user.view.Profile=Bienvenido al perfil de {0}
+user.view.Profile=Moovify | Bienvenido al perfil de {0}
 user.view.Posts=Posts escritos por {0}
 user.view.Comments=Comentarios de {0}
 user.view.CommentsNotFound=Este usuario todav\u00EDa no tiene comentarios.
-user.view.postNotFound=Este usuario no tiene posts.
+user.view.postNotFound=Este usuario todav\u00EDa no tiene posts.
 user.view.notDescription=Este usuario todav\u00EDa no tiene una descripci\u00F3n.
 user.emailConfirm.closeModal=Ok, \u00A1lo tienes!
 user.passwordResetSuccess.title=Cambio de contrase\u00F1a exitoso
@@ -245,6 +248,8 @@ mail.resendConfirmation.body=Email enviado a {0}
 
 #############################################################MOVIE#############################################################
 
+movie.title=Moovify | Película
+movie.view.title=Moovify | Película: {0}
 movie.view.meta.releaseDate=D\u00EDa de estreno: {0}
 movie.view.meta.popularity=Popularidad: {0}
 movie.view.meta.originalLanguage=Lengua original: {0}
@@ -264,7 +269,7 @@ search.searchResults=Resultados de la b\u00FAsqueda
 #############################################################SEARCH-Posts#############################################################
 
 search.posts=Posts
-search.posts.pageTitle=B\u00FAsqueda de posts
+search.posts.pageTitle=Moovify | B\u00FAsqueda de posts: {0}
 search.posts.postsNotFound=No hay posts para estos requerimientos. Intenta cambiar los par\u00E1metros de b\u00FAsqueda o ir a la pantalla principal para encontrar posts que puedan interesarte.
 search.posts.categories.all=Todos los posts
 search.posts.postAge.allTime=Todos los tiempos
@@ -283,7 +288,7 @@ search.posts.pagination.pageSize.default=5
 #############################################################SEARCH-Movies#############################################################
 
 search.movies=Pel\u00EDculas
-search.movies.pageTitle=B\u00FAsqueda de pel\u00EDculas
+search.movies.pageTitle=Moovify | B\u00FAsqueda de pel\u00EDculas: {0}
 search.movies.categories.label=Categor\u00EDa
 search.movies.categories.all=Todos
 search.movies.categories.action=Acci\u00F3n
@@ -328,7 +333,7 @@ search.movies.decades.2010s=2010s
 #############################################################SEARCH-Users#############################################################
 
 search.users=Usuarios
-search.users.pageTitle = B\u00FAsqueda de Usuarios
+search.users.pageTitle=Moovify | B\u00FAsqueda de Usuarios: {0}
 search.user.role.label=Rol:
 search.user.roles.all=Cualquiera
 search.user.roles.admin=Administrador
