--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -57,10 +57,11 @@ post.view.tags=Key words
 post.view.writtenBy=Written by:
 post.view.comments.title=Comments ({0})
 post.view.votes=Votes: {0}
+post.view.title= Moovify | Post: {0}
 post.delete.button=Delete post
 post.delete.modalTitle = Are you sure you want to delete this post?
 
-post.create.title=Create Post
+post.create.title=Moovify | Create Post
 post.create.newPost=Create new post
 post.create.titlePlaceholder=Title
 post.create.createButton=Create
@@ -86,6 +87,7 @@ postDisplay.meta.age.minutes={0} mins ago
 
 #############################################################COMMENTS#############################################################
 
+comment.title=Moovify | Comment
 comment.view.votes=Votes: {0}
 comment.view.post.removed=Post removed
 comment.notEnabled.message=** This comment was removed :( **
@@ -124,6 +126,7 @@ user.profile=My profile
 user.signup=Signup
 
 user.login=Login
+user.login.title=Moovify | Login
 user.login.noAccount=Do not have an account yet?
 user.login.Username=Username
 user.login.Password=Password
@@ -137,7 +140,7 @@ user.create.Password=Password
 user.create.Name=Name
 user.create.Email=Email
 user.create.repeatPassword=Repeat password
-user.create.signUpTitle=Sign up
+user.create.signUpTitle=Moovify | Sign up
 user.create.signUpDesc=Please fill this form to get free access to Moovify
 user.create.button=Create account
 user.create.alreadyAccount=Already have an account?
@@ -148,7 +151,7 @@ user.create.noAvatarSelected=No Avatar Selected
 user.create.avatarSelected=Selected Avatar:
 
 user.profile.ResendEmail=Resend email
-user.profile.Profile={0}'s Profile
+user.profile.Profile=Moovify | {0}'s Profile
 user.profile.yourPosts=Your Posts
 user.profile.yourComments=Your comments
 user.profile.inMoovifySince=In Moovify since: {0}
@@ -169,7 +172,7 @@ user.profile.CommentsNotFound=You don't have any comment. You can comment any po
 user.profile.uploadAvatar=Upload new avatar
 user.profile.PostsNotFound=You don't have posts. Create one !
 user.profile.notDescription=You don't have a description yet. Enter one !
-user.profile.editingProfile=Editing {0}'s profile
+user.profile.editingProfile=Moovify | Editing {0}'s profile
 user.profile.editProfileDesc=Here you will be able to edit your data and password
 user.profile.edit.currentName=Current name: {0}
 user.profile.edit.newName=New name
@@ -185,7 +188,7 @@ user.profile.changePasswordDesc=You can change your password in here. Be careful
 user.profile.edit.name=Edit name
 user.profile.edit.username=Edit username
 user.profile.edit.description=Edit description
-user.view.Profile=Welcome to {0}'s Profile
+user.view.Profile=Moovify | Welcome to {0}'s Profile
 user.view.Posts=Posts written by {0}
 user.view.Comments=Comments made by {0}
 user.view.CommentsNotFound=This user doesn't have any comment.
@@ -247,6 +250,8 @@ mail.resendConfirmation.body=Email sent to {0}
 
 #############################################################MOVIE#############################################################
 
+movie.title=Moovify | Movie
+movie.view.title=Moovify | Movie: {0}
 movie.view.meta.releaseDate=Premier date: {0}
 movie.view.meta.popularity=Popularity: {0}
 movie.view.meta.originalLanguage=Original language: {0}
@@ -267,7 +272,7 @@ search.searchResults = Search results
 #############################################################SEARCH-Posts#############################################################
 
 search.posts=Posts
-search.posts.pageTitle = Posts search
+search.posts.pageTitle=Moovify | Posts search: {0}
 search.posts.categories.all=All posts
 search.posts.postAge.allTime=All time
 search.posts.postAge.pastYear=Past Year
@@ -285,7 +290,7 @@ search.posts.pagination.pageSize.default=5
 #############################################################SEARCH-Movies#############################################################
 
 search.movies=Movies
-search.movies.pageTitle = Movies search
+search.movies.pageTitle=Moovify | Movies search: {0}
 search.movies.categories.label=Category
 search.movies.categories.all=All
 search.movies.categories.action=Action
@@ -330,7 +335,7 @@ search.movies.decades.2010s=2010s
 #############################################################SEARCH-Users#############################################################
 
 search.users=Users
-search.users.pageTitle = Users search
+search.users.pageTitle=Moovify | Users search: {0}
 search.user.role.label=Role:
 search.user.roles.all=Any
 search.user.roles.admin=Admin
@@ -359,32 +364,4 @@ error.nonExistingSearchCriteriaException=The order provided for the search is in
 error.invalidMovieIdException=A Movie selected is invalid. Make sure the provided info is correct.
 error.invalidPaginationArgumentException=Pagination Arguments provided (Page Size and/or Page Number) are invalid. Make sure the provided info is correct.
 error.invalidRoleException=The Role of the user given is not valid. Make sure the provided info is correct.
-error.DeletedDisabledModelException=You tried to delete an entity which was already deleted
-error.RestoredEnabledModelException=You tried to restore an entity which was already restored
-error.IllegalCommentLikeException=The Comment you tried to vote on is not valid
-error.IllegalPostLikeException=The Post you tried to vote on is not valid
-error.InvalidUserPromotionException=You tried to promote an invalid User
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+error.DeletedDisabledModelException=You tried to delete an entity which was 
