Fixed issues with messages. Ft Tobi

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -140,7 +140,8 @@ user.create.Password=Password
 user.create.Name=Name
 user.create.Email=Email
 user.create.repeatPassword=Repeat password
-user.create.signUpTitle=Moovify | Sign up
+user.create.signUp=Sign up
+user.create.signUp.title=Moovify | Sign up
 user.create.signUpDesc=Please fill this form to get free access to Moovify
 user.create.button=Create account
 user.create.alreadyAccount=Already have an account?
