--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -140,7 +140,8 @@ user.create.Password=Contrase\u00F1a
 user.create.Name=Nombre
 user.create.Email=Email
 user.create.repeatPassword=Repetir contrase\u00F1a
-user.create.signUpTitle=Moovify | Registrate
+user.create.signUp=Registrate
+user.create.signUp.title=Moovify | Registrate
 user.create.signUpDesc=Por favor llena este formulario para obtener acceso gratis a Moovify
 user.create.button=Crear una cuenta
 user.create.alreadyAccount=\u00BFYa posees una cuenta?
