Fixed bad pagination URL

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -243,8 +243,8 @@ mail.errorResendEmail=The link you're trying to use is not valid :(
 mail.registrationConfirm.goHome=Return home
 mail.registrationConfirm.createPost=Create a Post
 mail.registrationConfirm.countdown=Redirect to home in
-mail.errorResendEmail.body=If you wish us to resend it you can do it by clicking here
-mail.errorResendEmail.resendEmail=Resend email
+mail.errorResendEmail.body=If you wish us to resend it you can do it in your 
+mail.errorResendEmail.resendEmail=profile.
 mail.resendConfirmation.title=Confirmation email has been resent
 mail.resendConfirmation.body=Email sent to {0}
 
