--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -242,8 +242,8 @@ mail.errorResendEmail=El link que estas intentando usar no es v\u00E1lido :(
 mail.registrationConfirm.goHome=Volver al inicio
 mail.registrationConfirm.createPost=Crear un post
 mail.registrationConfirm.countdown=Redirigiendo al inicio en
-mail.errorResendEmail.body=Si deseas que lo reenviemos puedes hacerlo clickeando aqu\u00ED
-mail.errorResendEmail.resendEmail=Reenviar email
+mail.errorResendEmail.body=Si deseas que lo reenviemos puedes solicitarlo desde tu 
+mail.errorResendEmail.resendEmail=perfil.
 mail.resendConfirmation.title=El email de confirmaci\u00F3n ha sido reenviado
 mail.resendConfirmation.body=Email enviado a {0}
 
