Some messages that were wrong ft tobi

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -4,7 +4,7 @@ Min=Debes seleccionar {1} {0}
 MaxTagsSizeConstraint=El m\u00E1ximo n\u00FAmero permitido de {0} es 5
 MoviesSizeConstraint=Debes seleccionar al menos una pel\u00EDcula de la lista de {0} y no m\u00E1s de 20
 Email=No es un email v\u00E1lido
-NotEmpty={0} no puede ser vac\u00EDo
+NotEmpty={0} no puede estar vac\u00EDo
 ValidPassword=La contrase\u00F1a debe tener entre 12 y 30 caracteres
 PasswordsEqualConstraint=Las contrase\u00F1as deben ser iguales
 PasswordsUpdateEqualConstraint=Las contrase\u00F1as deben ser iguales
@@ -69,7 +69,7 @@ post.create.titlePlaceholder=T\u00EDtulo
 post.create.createButton=Crear
 post.create.newPostTitle=Elije un t\u00EDtulo para tu post (Al menos 6 caracteres)
 post.create.body=Escribe el cuerpo de tu post aqu\u00ED. (No puede ser vac\u00EDo)
-post.create.newPostCategory=Selecciona la categor\u00EDa del post (Requiredo)
+post.create.newPostCategory=Selecciona la categor\u00EDa del post (Requerido)
 post.create.selectCategory=Selecciona la categor\u00EDa
 post.create.modal.moviesDiscussed.title=\u00BFQu\u00E9 pel\u00EDculas se discuten en este post?
 post.create.modal.moviesDiscussed.constrains=Debes elegir al menos una (M\u00E1ximo 20)
@@ -274,9 +274,9 @@ search.posts.pageTitle=Moovify | B\u00FAsqueda de posts: {0}
 search.posts.postsNotFound=No hay posts para estos requerimientos. Intenta cambiar los par\u00E1metros de b\u00FAsqueda o ir a la pantalla principal para encontrar posts que puedan interesarte.
 search.posts.categories.all=Todos los posts
 search.posts.postAge.allTime=Todos los tiempos
-search.posts.postAge.pastYear=A\u00F1o pasado
-search.posts.postAge.pastMonth=Mes pasado
-search.posts.postAge.pastWeek=Semana pasado
+search.posts.postAge.pastYear=Último año
+search.posts.postAge.pastMonth=Último mes
+search.posts.postAge.pastWeek=Última semana
 search.posts.postAge.pastDay=\u00DAltimas 24hs
 search.posts.categories.label=Tipo de Post:
 search.posts.postAge.label=De:
