Fixed spelling mistake in messages_es.properties

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -131,7 +131,7 @@ user.login.title=Moovify | Iniciar sesi\u00F3n
 user.login.noAccount=\u00BFNo posees una cuenta todav\u00EDa?
 user.login.Username=Nombre de usuario
 user.login.Password=Contrase\u00F1a
-user.login.loginTitle=Inicar sesi\u00F3n
+user.login.loginTitle=Iniciar sesi\u00F3n
 user.login.rememberMe=Recuérdame
 user.login.badCredentials=Usuario o contrase\u00F1a incorrecta
 user.login.resetPassword=Olvid\u00E9 mi contrase\u00F1a
